# UBB

./: Lab2.cs  README.md
1stSemester/ASC/ASC_Lab_2_ex1/: ASC_Lab_2.asm
1stSemester/ASC/ASC_Lab_3_ex1/: ex1.asm
1stSemester/ASC/ASC_Lab_4_homework/: Lab_4_homework.asm
1stSemester/ASC/ASC_Week_10_homework/: text.asm  text.lst  week10_1.asm  week10_1.lst  week10_2.asm  week10_2.lst  week10_3.asm  week10_3.lst  week10_4.asm  week10_4.lst
1stSemester/Logic/: Implementation_Operations_Micu_Alexia_Claudia.docx  Micu_Alexia_Claudia_Operation_Conversion.py
2ndSemester/OOP/a45-915-Micu-AlexiaClaudia/: CMakeLists.txt  dynamicArray.h  dynamicArrayIterator.h  event.accdb  event.cpp  event.h  main.cpp  services.cpp  services.h  tests.cpp  userInterface.cpp  userInterface.h  userService.cpp  userService.h
2ndSemester/OOP/a7-915-Micu-AlexiaClaudia-1/: CMakeLists.txt  a7Diagram.mdj
2ndSemester/OOP/a7-915-Micu-AlexiaClaudia-1/Exceptions/: exceptions.cpp
2ndSemester/OOP/a7-915-Micu-AlexiaClaudia-1/FileRepository/: csvRepository.cpp  fileRepository.cpp  fileRepository.h  htmlRepository.cpp
2ndSemester/OOP/a7-915-Micu-AlexiaClaudia-1/repository/: repository.h
2ndSemester/OOP/a7-915-Micu-AlexiaClaudia-1/userInterface/: userInterface.cpp
2ndSemester/SDA/Lab2_ADT_Sorted_MultiMap/: CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h  requrement.txt
2ndSemester/SDA/Lab3_MultiMap/: CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h
2ndSemester/SDA/Lab5_ADT_IterableList/: CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  SortedIndexeList.cpp  SortedIndexedList.h
2ndSemester/SDA/Lab5_ADT_List/: CMakeLists.txt  IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h
3rdSemester/: labW10.pkt
3rdSemester/Databases/: A3.sql  Ah.sql  Insert.sql  Intersections.sql  L4_Functions.sql  L4_RandData.sql  L4_tests.sql  L5.sql  Lab3.sql  Tables.sql
3rdSemester/Networks/: labW12.pkt
3rdSemester/PLF/: Lab1Pb1.pl  Lab1Pb2.pl  Pb10.pl  Pb11.pl  Pb12.pl  Pb13.pl  Pb14.pl  Pb3.pl  Pb4.pl  Pb5.pl  Pb6.pl  Pb7.pl  Pb8.pl  Pb9.pl
3rdSemester/lab1/: lab1.sln
4thSemester/AI/: Lab_1.ipynb  Lab_10.ipynb  Lab_2.ipynb  Lab_3.ipynb  Lab_4.ipynb  Lab_5.ipynb  Lab_7.ipynb  Lab_8.ipynb  Lab_9.ipynb
4thSemester/ISS/: Lab1.cs  readme.md
5thSemester/VR/: readme.md
5thSemesterRPA/Final_Project/: Main.xaml  PDD-template (2).docx  SDD_AutomationHub_template (1).docx
6thSemester/DesignPatterns/: CodeExamples.docx  Main.java
ASC_Lab_2_ex1/: ASC_Lab_2.lst  ASC_Lab_2.txt
ASC_Lab_3_ex1/: ex1.lst
ASC_Lab_4_homework/: Lab_4_homework.lst
ASC_Week_8_hw/: h8_8_2.asm
ToySemaphore/: log12.txt  log7.txt
Views/Cars/: Edit.cshtml  List.cshtml
Views/Shared/: _Layout.cshtml
a23-915-Micu-AlexiaClaudia/: dinamicArray.c  dinamicArray.h  ui.c
a6-915-Micu-AlexiaClaudia-1/: CMakeLists.txt  administratorService.h  main.cpp  userInterface.h  userService.cpp  userService.h
a7-915-Micu-AlexiaClaudia-1/Exceptions/: exceptions.h
a7-915-Micu-AlexiaClaudia-1/FileRepository/: csvRepository.h  htmlRepository.h
a7-915-Micu-AlexiaClaudia-1/Validation/: validator.cpp  validator.h
a7-915-Micu-AlexiaClaudia-1/domain/: event.h
a7-915-Micu-AlexiaClaudia-1/service/: administratorService.cpp  administratorService.h  userService.cpp  userService.h
a7-915-Micu-AlexiaClaudia-1/userInterface/: main.cpp  userInterface.h
e1-915-915-Micu-AlexiaClaudia/src/: exceptions.py  repo.py  services.py  start.py
t2-915-Micu-AlexiaClaudia/src/: domain.py  repository.py  services.py
(+769 files in other folders)
