cmake_minimum_required(VERSION 3.24)
project(a45_915_Micu_AlexiaClaudia)

set(CMAKE_CXX_STANDARD 14)

add_executable(a45_915_Micu_AlexiaClaudia main.cpp event.h event.cpp administratorService.cpp administratorService.h userInterface.cpp userInterface.h userService.cpp userService.h repository.h administratorService.h)
